// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo agent java delete "frodo agent java delete --agent-id frodo-test-java-agent": should display error when the java agent with id 'frodo-test-java-agent' cannot be deleted since it does not exist 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1701807230743 [b672336b-41ef-428d-ae4a-e0c082875377]
Error deleting alpha realm java agent frodo-test-java-agent
  alpha realm java agent 'frodo-test-java-agent' not found!
"
`;

exports[`frodo agent java delete "frodo agent java delete --all": should do nothing when no java agent can be deleted since none exist 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1701807230743 [b672336b-41ef-428d-ae4a-e0c082875377]
"
`;

exports[`frodo agent java delete "frodo agent java delete -a": should delete all java agents 1`] = `""`;

exports[`frodo agent java delete "frodo agent java delete -i frodo-test-java-agent": should delete the java agent with id 'frodo-test-java-agent' 1`] = `""`;
